@@ -1,4 +1,4 @@
-LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.663 $>
+LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.664 $>
 
 
 [Note: This file does not mention every change made to the NetBSD source tree.
@@ -8,3 +8,5 @@ containing just the word `help' to `majordomo@NetBSD.org'.]
 
 
 Changes from NetBSD 4.0 to NetBSD 5.0:
+	iwi(4): Use firmload(9) to load firmware images. You no longer need to
+		use iwictl(8) to load the firmware. [skrll 20060809]
